apps/nginx-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
